Melhorando documentação do swagger
